# hyps-geant4

./: .gitignore
analyzer/script/: FilterSubmitter.sh  Submitter.sh  (+2 more)
param_sim/: fieldmap
simulation/: CMakeLists.txt  build.sh  clean.sh  main.cc  run.mac  vis.mac
simulation/include/: Analysis.hh  CFTDetectorConstruction.hh  CFTFiberHit.hh  CFTFiberSD.hh  CFTPrimaryGeneratorAction.hh  ConfMan.hh  CrystalHit.hh  CrystalSD.hh  DCGeomMan.hh  DCGeomRecord.hh  DecayWithPolarization.hh  DetectorID.hh  DetectorID_old.hh  EventAction.hh  FieldElements.hh  HIHRPhysicsList.hh  Kinema2BodyVer2.hh  Kinema3Body.hh  Kinema3Resonance.hh  Kinematics.hh  Legendre.hh  MaterialList.hh  PhysicsList.hh  RadDeg.hh  RootHelper.hh  SKSChamberHit.hh  SKSChamberSD.hh  SKSCounterHit.hh  SKSCounterSD.hh  SKSField.hh  SKSVirtualPlaneHit.hh  SKSVirtualPlaneSD.hh  SteppingAction.hh  TrackingAction.hh  VisManager.hh  common.h
simulation/script/: FilterAllRun.sh  Run.sh  Submitter.sh  run_bsub.sh
simulation/src/: Analysis.cc  CFTDetectorConstruction.cc  CFTFiberHit.cc  CFTFiberSD.cc  CFTPrimaryGeneratorAction.cc  ConfMan.cc  CrystalHit.cc  CrystalSD.cc  DCGeomMan.cc  DCGeomRecord.cc  DecayWithPolarization.cc  EventAction.cc  HIHRPhysicsList.cc  Kinema2BodyVer2.cc  Kinema3Body.cc  Kinema3Resonance.cc  Kinematics.cc  Legendre.cc  MaterialList.cc  PhysicsList.cc  PhysicsList.cc.org  SKSChamberHit.cc  SKSChamberSD.cc  SKSCounterHit.cc  SKSCounterSD.cc  SKSField.cc  SKSVirtualPlaneHit.cc  SKSVirtualPlaneSD.cc  SksFieldMap.cc  SteppingAction.cc  TrackingAction.cc  Transportation.cc  VisManager.cc
simulation/tools/: calcDCGeometry_LEPS.C  calcDCGeometry_LEPS_old.C
simulation/tools/Geometry/: calcBeamDCGeometry.C  calcBeamDCGeometryShift.C  calcBeamDCGeometryShift2.C  calcBeamDCGeometryShift3.C  calcDCGeometry.C  calcDCGeometryShift.C  calcDCGeometryShift2.C  calcDCGeometryShift3.C  calcDCGeometry_LEPS.C
simulation/tools/LambdaProduction/: fitDiffCrossSection.C
(+178 files in other folders)
